Get thumbnails. Decouple article init'ing.

--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -25,9 +25,11 @@
     </div>
 
     <script type="text/html" id="template_article">
-        <div class="article" data-bind="attr: {'data-url': id}">
-            <div data-bind="text: webTitle"></div>
-            <a class="article-title" data-bind="text: id, attr: {href: _absUrl}"></a>
+        <div class="trail cf" data-bind="attr: {'data-url': id}">
+            <img data-bind="attr: {src: thumbnail}" />
+            <h2>
+                <a data-bind="text: webTitle() !== '' ? webTitle() : id(), attr: {href: _absUrl}"></a>
+            </h2>
         </div>
     </script>
     
