--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -474,31 +474,47 @@ a.cta, .cta a {
 .fronts .trail {
     cursor: move;
     background-color: #fff;
-    margin:  0 0 10px 0;
+    padding: 5px;
     border-bottom: 1px dotted #ccc;
+}
+
+.fronts .trail:hover {
+    background-color: #eee;
 }
 
 .fronts .trail img {
     float: left;
-    margin: 0 10px 10px 0;
+    margin: 2px 10px 10px 0;
     width: 140px;
     height: 84px;
 }
 
-.fronts .trail h2 {
-    font-family: EgyptianText, georgia, serif;
-    font-size: 17px;
-    line-height: 20px;
-    weight: normal;
+.fronts .trail p {
     margin: 0;
     padding: 0;
 }
 
+.fronts .trail h2 {
+    font-family: EgyptianText, georgia, serif;
+    font-size: 18px;
+    line-height: 20px;
+    weight: normal;
+    margin: 0;
+    padding: 0 0 5px 0;
+}
+
 .fronts .trail .trailText {
-    color: rgb(85, 85, 85);
+    color: #666;
     font-family: EgyptianText, georgia, serif;
     font-size: 14px;
     font-weight: normal;
-    line-height: 20px;
-    padding: 0 0 10px 0;
+    line-height: 18px;
+}
+
+.fronts .trail .date {
+    color: #999;
+    font-family: arial, sans-serif;
+    font-size: 11px;
+    font-weight: normal;
+    line-height: 16px;
 }
