--- a/admin/app/views/admin.scala.html
+++ b/admin/app/views/admin.scala.html
@@ -11,6 +11,13 @@
         </ul>
     </div>
     <div class="row">
+        <h3>Longitudinal Analytics</h3>
+        <p class="muted">See Ophan for neartime data.</p>
+        <ul>
+            <li><a href="@routes.AnalyticsController.render()">Pageviews</a></li>
+        </ul>
+    </div>
+    <div class="row">
         <h3>Development tools</h3>
         <p class="muted">Tools for the development team</p>
         <ul>
