--- a/facia/app/views/front.scala.html
+++ b/facia/app/views/front.scala.html
@@ -1,4 +1,4 @@
-@(front: MetaData, trailblocks: Seq[Trailblock])(implicit request: RequestHeader)
+@(front: MetaData, trailblocks: Seq[RunningOrderTrailblock])(implicit request: RequestHeader)
 
 @main(front, Switches.all){
 }{
