--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -460,10 +460,16 @@ a.cta, .cta a {
 .cf:after{clear:both}
 .cf{zoom:1}
 
-.fronts .finder,
-.fronts .lists {
+.fronts .finder {
+    box-sizing:border-box;
     float: left;
-    width: 40%;
+    width: 25%;
+}
+
+.fronts .lists {
+    box-sizing:border-box;
+    float: left;
+    width: 75%;
 }
 
 .fronts .finder {
@@ -472,29 +478,44 @@ a.cta, .cta a {
 }
 
 .fronts .list-picker {
-    float: left;
-    width: 15%;
     background-color: #ddd;
     padding: 7px 7px 5px 7px;
-    border-right: 10px solid #fff;
 }
 
 .fronts .list-picker__title,
 .fronts .finder__title,
 .fronts .list-header__title {
-    font-weight: bold;
     font-size: 18px;
     margin: 0 0 10px 0;
 }
 
+.fronts .list-picker__title,
+.fronts .finder__title {
+    color: #666;
+}
+
+.fronts .finder__title {
+    margin-top:  10px;
+}
+
 .fronts .list-picker__item {
     font-weight: bold;
-    margin: 0 0 2px 0;
+    display: inline-block;
+    padding-left: 5px;
+    margin-left:  5px;
+    border-left:  1px solid #ccc;
+}
+
+.fronts .list-picker__item:first-child {
+    font-weight: bold;
+    display: inline-block;
+    padding-left: 0;
+    margin-left:  0;
+    border-left:  0;
 }
 
 .fronts .list-picker__new {
-    color: #666;
-    margin: 20px 0 0 0;
+    float: right;
 }
 
 .fronts .lists .connectedList {
@@ -506,7 +527,7 @@ a.cta, .cta a {
 .fronts .list-header {
     background-color: #214583;
     color: #fff;
-    padding: 7px 7px 5px 7px;
+    padding: 7px 7px 0 10px;
     overflow: auto;
 }
 
@@ -521,6 +542,14 @@ a.cta, .cta a {
 
 .fronts .list-header__control {
     color: #fff;
+}
+
+.fronts .trailblock {
+    box-sizing:border-box;
+    width: 33.333%;
+    float: left;
+    border-top:  10px solid #fff;
+    border-left: 10px solid #fff;
 }
 
 .fronts .trail {
@@ -549,8 +578,8 @@ a.cta, .cta a {
 
 .fronts .trail h2 {
     font-family: EgyptianText, georgia, serif;
-    font-size: 18px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 18px;
     weight: normal;
     margin: 0;
     padding: 0 0 5px 0;
@@ -573,6 +602,5 @@ a.cta, .cta a {
 }
 
 .fronts input[type="text"] {
-    width: 75%;
 }
 
