--- a/admin/app/views/analytics.scala.html
+++ b/admin/app/views/analytics.scala.html
@@ -2,9 +2,11 @@
 
 @admin_main("Pageviews", env, isAuthed = true) {
 
+    <h1>Longitudinal Pageview Analytics</h1>
+
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript">
-        google.load("visualization", "1", {packages:["corechart", "geochart"]});
+        google.load("visualization", "1", {packages:["corechart", "geochart", "treemap"]});
         google.setOnLoadCallback(drawCharts);
 
         function drawCharts() {
@@ -19,5 +21,5 @@
     </script>
 
 
-    @charts.map{ chart => <div id="@chart.id" style="max-width: 900px"></div> }
+    @charts.map{ chart => <div id="@chart.id" style="max-width: 1200px"></div> }
 }
