--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -6,70 +6,72 @@
 
 .i-arrow-white-down { background-position: -35px -8px; width: 15px; height: 7.319px; }
 
-.i-comment-count-small { background-position: -50px -8px; width: 14px; height: 12px; }
+.i-close-icon { background-position: -50px -8px; width: 15px; height: 15px; }
 
-.i-date { background-position: -64px -8px; width: 10px; height: 10px; }
+.i-comment-count-small { background-position: -65px -8px; width: 14px; height: 12px; }
 
-.i-ee-add-button { background-position: -74px -8px; width: 54px; height: 47px; }
+.i-date { background-position: -79px -8px; width: 10px; height: 10px; }
 
-.i-fb { background-position: -141px -8px; width: 10.88px; height: 22.38px; }
+.i-ee-add-button { background-position: -89px -8px; width: 54px; height: 47px; }
 
-.i-filter-arrow-down { background-position: -151px -8px; width: 20px; height: 11.431px; }
+.i-fb { background-position: -156px -8px; width: 10.88px; height: 22.38px; }
 
-.i-filter-arrow-left { background-position: -171px -8px; width: 8.703px; height: 15px; }
+.i-filter-arrow-down { background-position: -166px -8px; width: 20px; height: 11.431px; }
 
-.i-filter-arrow-right { background-position: -179px -8px; width: 8.702px; height: 15px; }
+.i-filter-arrow-left { background-position: -186px -8px; width: 8.703px; height: 15px; }
 
-.i-filter-arrow-up { background-position: -187px -8px; width: 20px; height: 11.431px; }
+.i-filter-arrow-right { background-position: -194px -8px; width: 8.702px; height: 15px; }
 
-.i-fullscreen-toggle { background-position: -207px -8px; width: 12px; height: 12px; }
+.i-filter-arrow-up { background-position: -202px -8px; width: 20px; height: 11.431px; }
 
-.i-gallery { background-position: -219px -8px; width: 16px; height: 14px; }
+.i-fullscreen-toggle { background-position: -222px -8px; width: 12px; height: 12px; }
 
-.i-gplus { background-position: -235px -8px; width: 24.361px; height: 20.535px; }
+.i-gallery { background-position: -234px -8px; width: 16px; height: 14px; }
 
-.i-guardian-logo { background-position: -259px -8px; width: 107.667px; height: 20.125px; }
+.i-gplus { background-position: -250px -8px; width: 24.361px; height: 20.535px; }
 
-.i-guardian-picks { background-position: -366px -8px; width: 15px; height: 46.624px; }
+.i-guardian-logo { background-position: -274px -8px; width: 107.667px; height: 20.125px; }
 
-.i-image-white { background-position: -381px -8px; width: 12px; height: 9px; }
+.i-guardian-picks { background-position: -381px -8px; width: 15px; height: 46.624px; }
 
-.i-image { background-position: -393px -8px; width: 12px; height: 9px; }
+.i-image-white { background-position: -396px -8px; width: 12px; height: 9px; }
 
-.i-livequote-after { background-position: -405px -8px; width: 37px; height: 20px; }
+.i-image { background-position: -408px -8px; width: 12px; height: 9px; }
 
-.i-livequote-before { background-position: -442px -8px; width: 37px; height: 20px; }
+.i-livequote-after { background-position: -420px -8px; width: 37px; height: 20px; }
 
-.i-local-nav-arrow { background-position: -479px -8px; width: 49px; height: 37px; }
+.i-livequote-before { background-position: -457px -8px; width: 37px; height: 20px; }
 
-.i-mail { background-position: -528px -8px; width: 28.004px; height: 20px; }
+.i-local-nav-arrow { background-position: -494px -8px; width: 49px; height: 37px; }
 
-.i-menu-active { background-position: -556px -8px; width: 18px; height: 12px; }
+.i-mail { background-position: -543px -8px; width: 28.004px; height: 20px; }
 
-.i-menu { background-position: -574px -8px; width: 18px; height: 12px; }
+.i-menu-active { background-position: -571px -8px; width: 18px; height: 12px; }
 
-.i-powered-by-ee { background-position: -381px -45px; width: 68px; height: 31px; }
+.i-menu { background-position: -571px -20px; width: 18px; height: 12px; }
 
-.i-quote-marks { background-position: -449px -45px; width: 64px; height: 32px; }
+.i-powered-by-ee { background-position: -396px -45px; width: 68px; height: 31px; }
 
-.i-red-card { background-position: -526px -45px; width: 9px; height: 12px; }
+.i-quote-marks { background-position: -464px -45px; width: 64px; height: 32px; }
 
-.i-search-blue { background-position: -535px -45px; width: 14px; height: 14px; }
+.i-red-card { background-position: -541px -45px; width: 9px; height: 12px; }
 
-.i-search { background-position: -549px -45px; width: 14px; height: 14px; }
+.i-search-blue { background-position: -550px -45px; width: 14px; height: 14px; }
 
-.i-sport-arrow-small { background-position: -563px -45px; width: 5.802px; height: 10px; }
+.i-search { background-position: -564px -45px; width: 14px; height: 14px; }
 
-.i-sport-arrow { background-position: -568px -45px; width: 8.703px; height: 15px; }
+.i-sport-arrow-small { background-position: -578px -45px; width: 5.802px; height: 10px; }
 
-.i-story-quote { background-position: -526px -60px; width: 49px; height: 25px; }
+.i-sport-arrow { background-position: -583px -45px; width: 8.703px; height: 15px; }
 
-.i-top-stories-active { background-position: -575px -60px; width: 16px; height: 16px; }
+.i-story-quote { background-position: -541px -60px; width: 49px; height: 25px; }
 
-.i-top-stories { background-position: -575px -76px; width: 16px; height: 16px; }
+.i-top-stories-active { background-position: -8px -85px; width: 16px; height: 16px; }
 
-.i-twitter { background-position: -8px -92px; width: 25px; height: 20px; }
+.i-top-stories { background-position: -24px -85px; width: 16px; height: 16px; }
 
-.i-witness-logo { background-position: -33px -92px; width: 119px; height: 16px; }
+.i-twitter { background-position: -40px -85px; width: 25px; height: 20px; }
 
-.i-yellow-card { background-position: -152px -92px; width: 9px; height: 12px; }
+.i-witness-logo { background-position: -65px -85px; width: 119px; height: 16px; }
+
+.i-yellow-card { background-position: -184px -85px; width: 9px; height: 12px; }
