Adding caption toggle

--- a/applications/app/views/fragments/lightboxGalleryBody.scala.html
+++ b/applications/app/views/fragments/lightboxGalleryBody.scala.html
@@ -14,6 +14,8 @@
                          data-width="@image.width"
                          data-height="@image.height"
                     />
+
+                    <i class="i i-gallery-arrow gallery__caption-handle"></i>
                     <div class="gallery__caption">
                         <p class="gallery__caption--text type-10">@Html(image.caption.getOrElse(""))</p>
                         <p class="gallery__caption--credit type-11">@image.credit</p>
@@ -27,6 +29,7 @@
        data-link-name="Gallery Previous"
        data-is-ajax="true"
        href="?index=@(index - 1)">
+         <i class="i i-gallery-arrow"></i>
          <span class="h">Previous</span>
     </a>
 
@@ -34,6 +37,7 @@
        data-link-name="Gallery Next"
        data-is-ajax="true"
        href="?index=@(index - 1)">
+          <i class="i i-gallery-arrow"></i>
           <span class="h">Next</span>
     </a>
 
