--- a/facia/app/views/front.scala.html
+++ b/facia/app/views/front.scala.html
@@ -1,7 +1,7 @@
-@(front: MetaData, trailblocks: Seq[TrailblockNew])(implicit request: RequestHeader)
+@(front: MetaData, trailblocks: Seq[Trailblock])(implicit request: RequestHeader)
 
 @main(front, Switches.all){
 }{
-    @fragments.frontBody(front, trailblocks)
-    
+@fragments.frontBody(front, trailblocks)
+
 }
