Tablet users can go to the Sections page via main navigation

--- a/common/app/assets/stylesheets/module/_footer.scss
+++ b/common/app/assets/stylesheets/module/_footer.scss
@@ -40,6 +40,10 @@
             text-decoration: underline;
         }
     }
+
+	.hide-in-footer {
+		display: none;
+	}
 }
 
 /* Uses an id as is used as fragment
