--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -8,6 +8,7 @@
     position: relative;
     z-index: 1000;
     @media (min-width: $desktopAd) {
+        height: auto;
         min-height: 96px;
     }
 
