--- a/common/app/assets/stylesheets/module/_overlay.scss
+++ b/common/app/assets/stylesheets/module/_overlay.scss
@@ -1,10 +1,6 @@
 .overlay {
     display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
     background: #222222;
     z-index: 100;
 
@@ -22,6 +18,20 @@
 
 .overlay__toolbar {
     float: left;
+}
+
+
+/* ==========================================================================
+   Hide other page content when overlay is visible
+   ========================================================================== */
+.has-overlay {
+    background-color: #222222;
+
+    #header,
+    #preloads,
+    .footer {
+        display: none;
+    }
 }
 
 
