Overlay should take the whole screen

--- a/common/app/assets/stylesheets/module/_overlay.scss
+++ b/common/app/assets/stylesheets/module/_overlay.scss
@@ -26,6 +26,7 @@
    ========================================================================== */
 .has-overlay {
     background-color: #222222;
+    min-height: 100%;
 
     #header,
     #preloads,
